[package]  # Metadata about the package

name = "MiauOS"  # Name of the package

version = "0.1.0"  # Version of the package

authors = ["Marceline Roennfeldt <roen0014@asms.sa.edu.au>"]  # Author(s) of the package

[lib]  # Configuration for the library crate
crate-type = ["staticlib"]  # Compile the crate as a static library

[unstable]
build-std-features = ["compiler-builtins-mem"]
build-std = ["core", "compiler_builtins"]

[build]
target = "x86_64-MiauOS.json"
